# jmgtext

./: .gitignore  LICENSE  README.md  pyproject.toml
crope/: test_rope.py
crope/lib/: Makefile  list.c  util.c
jmgtext/: jmgtext.py  rope.py  timer.py
jmgtext/crope/: crope.py  pystr.py  rope.py  test_crope.py
jmgtext/crope/lib/: Makefile  build_pystr.py  build_rope.py  pystr.c  pystr.h  rope.c  rope.h  rope_test  test  test.c  test.h  util.c  util.h
jmgtext/crope/lib/list/: list.c  list.h
tests/: test_jmgtext.py
