[tool.poetry]
name = "jmgtext"
version = "0.1.0"
description = ""
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
pytest = "^5.4.1"
mypy = "^0.770"
flake8 = "^3.7.9"
cffi = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
